solved coca cola shop page overflow issues

--- a/projects/coca-cola/style/style-shop.css
+++ b/projects/coca-cola/style/style-shop.css
@@ -105,10 +105,18 @@ main {
     grid-template-columns: 1fr;
     font-size: 10px;
   }
+  main{
+    grid-template-columns: 1fr ,1fr;
+  }
   .card__button {
     width: 100%;
   }
   .card__add {
     width: 100%;
+  }
+}
+@media screen and (max-width: 400px) {
+  main{
+    grid-template-columns: 1fr;
   }
 }
